samples/_failures_safe/1761339107_0ca46a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73d912b8.c: In function ‘bfs_traversal’:
./samples/SAFE/__tmp_73d912b8.c:179:5: error: expected declaration or statement at end of input
  179 |     visited[start_vertex] = 1;
      |     ^~~~~~~
